src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #1877f2;
  --ifm-color-primary-dark: #166bda;
  --ifm-color-primary-darker: #1564ce;
  --ifm-color-primary-darkest: #1153aa;
  --ifm-color-primary-light: #3385f3;
  --ifm-color-primary-lighter: #448ef4;
  --ifm-color-primary-lightest: #6aa4f6;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #4080ff;
  --ifm-color-primary-dark: #2b73ff;
  --ifm-color-primary-darker: #1e6aff;
  --ifm-color-primary-darkest: #0052f5;
  --ifm-color-primary-light: #558dff;
  --ifm-color-primary-lighter: #6296ff;
  --ifm-color-primary-lightest: #8bb2ff;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

/* GitHub icon theming */
[data-theme="dark"] .github-icon {
  filter: invert(1);
}

.github-icon {
  opacity: 0.6;
}

button {
  all: unset;
  cursor: pointer;
}

button:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

div {
  border-width: 0;
  border-style: solid;
  box-sizing: border-box;
}

.theme-code-block {
  font-size: 12px;
}

figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 3rem;
  margin-bottom: 2rem;
}

figure figcaption {
  margin-top: 0.5rem;
  opacity: 0.8;
  text-align: center;
  align-self: center;
  font-size: 0.8rem;
  line-height: 1.2rem;
  width: 60%;
}

figure img {
  max-width: 600px;
  object-fit: cover;
  align-self: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.img-rounded {
  border-radius: 8px;
  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
  margin-top: 3rem;
  margin-bottom: 3rem;
  max-width: 600px;
  object-fit: cover;
  align-self: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.menu__list {
  font-size: 14px;
}

.menu__caret {
  width: 14px;
  height: 14px;
  opacity: 0.5;
}

.theme-doc-sidebar-menu .menu__list-item {
  margin: 0;
  padding-top: 1px;
  padding-bottom: 1px;
}

.menu__list-item .menu__link {
  padding-top: 3px;
  padding-bottom: 3px;
}

